<resources>
    <string name="app_name">Runamic Ghent</string>
    <string name="pw_not_correct">Passwords do not match</string>
    <string name="empt_field">Empty field</string>
    <string name="navigation_text_start">Start</string>
    <string name="navigation_text_history">History</string>
    <string name="navigation_text_settings">Profile</string>
    <string name="generate_route">Generate Route</string>
    <string name="free_running">No Route</string>
    <string name="location_inaccurate_title">Location inaccuracy</string>
    <string name="location_inaccurate_wait">Wait</string>
    <string name="location_inaccurate_continue">Continue</string>
    <string name="location_inaccurate_message">Your location hasn\'t been accurately defined yet. You need to be outdoors. Without a good accuracy your run might not be tracked very well. Do you want to wait for a better signal or continue?</string>
    <string name="internet_connection">No internet connection</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="nature">Nature</string>
    <string name="city">City</string>
    <string name="unpaved">Unpaved</string>
    <string name="paved">Paved</string>
    <string name="hills">Hills</string>
    <string name="flat">Flat</string>
    <string name="safety">Safety</string>
    <string name="action">Action</string>
    <string name="around">Around:</string>
    <string name="no">No </string>
    <string name="preferences">Preferences: </string>
    <string name="beginner">Beginner</string>
    <string name="average">Average</string>
    <string name="expert">Expert</string>
    <string name="speed_label">Speed</string>
    <string name="avg_speed_label">Avg Speed</string>
    <string name="heart_rate_label">Heart Rate</string>
    <string name="avg_heart_rate_label">Avg Heart Rate</string>
    <string name="total_distance_label">Total Distance</string>
    <string name="distance_label">Distance</string>
    <string name="total_route_length_label">/ </string>
    <string name="total_duration_label">Total Duration</string>
    <string name="duration_label">Duration</string>
    <string name="delete">Delete</string>
    <string name="your_rating_label">Your Rating</string>
    <string name="no_runs">You haven\'t run or saved a run yet.</string>
    <string name="go_for_run">Go for a run!</string>
    <string name="string_divider">•</string>
    <string name="settings">Settings</string>
    <string name="greeting">Hi, </string>
    <string name="wrong_old_pw">Wrong old password</string>
    <string name="pw_to_weak">Password to weak, length minimum 6</string>
    <string name="changepicture">Give in URL picture</string>
    <string name="name">Name</string>
    <string name="total_distance_ran">Total distance ran</string>
    <string name="average_distance">Average_distance</string>
    <string name="total_duration">Total duration</string>
    <string name="average_duration">Average duration</string>
    <string name="average_running_speed">Average running speed</string>
    <string name="number_of_runs">Number of runs</string>
    <string name="average_heart_rate">Average heart rate</string>
    <string name="logout">LOG OUT</string>
    <string name="generating_route">Generating Route…</string>
    <string name="generate_alternative">Generate Alternative</string>
    <string name="start_running">Start Running</string>
    <string name="pause_run">Pause</string>
    <string name="resume_run">Resume</string>
    <string name="stop_run">Stop</string>
    <string name="off_route">Off Route</string>
    <string name="on_route">On Route</string>
    <string name="heart_rate_null">-</string>
    <string name="distance_null">0 m</string>
    <string name="duration_null">00:00</string>
    <string name="wrong_message">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="shorter_route">A shorter route has been requested</string>
    <string name="longer_route">A longer route has been requested</string>
    <string name="confirm_stop">Are you sure you want to stop running?</string>
    <string name="save_run">Save</string>
    <string name="discard_run">Discard</string>
    <string name="rating_label">Rate your run</string>
    <string name="audio_please">please</string>
    <string name="audio_turn">turn</string>
    <string name="audio_go">go</string>
    <string name="audio_new_route">for the new route, </string>
    <string name="audio_else">. Else, </string>
    <string name="audio_left">left</string>
    <string name="audio_right">right</string>
    <string name="audio_forward">forward</string>
    <string name="audio_uturn">turnaround</string>
    <string name="audio_couple_meters">in a couple of meters</string>
    <string name="audio_totaldistance">Total distance: </string>
    <string name="audio_totalduration">Total duration: </string>
    <string name="audio_average_speed">Average speed: </string>
    <string name="audio_average_heartrate">Average heart rate: </string>
    <string name="audio_meters"> meters</string>
    <string name="audio_kilometers"> kilometers</string>
    <string name="audio_heartrate_high">Your heart rate has been too high for a while. The route will be made shorter.</string>
    <string name="audio_heartrate_low">Your heart rate has been too low for a while. The route will be made longer.</string>
    <string name="audio_hour"> hour, </string>
    <string name="audio_hours"> hours, </string>
    <string name="audio_minute"> minute and </string>
    <string name="audio_minutes"> minutes and </string>
    <string name="audio_second"> second.</string>
    <string name="audio_seconds"> seconds.</string>
    <string name="pref_title_general">general</string>
    <string name="pref_title_mapmarkers">POI markers</string>
    <string name="pref_title_velocity">Velocity units</string>
    <string name="pref_summary_velocity">Choose whether your velocity is displayed in km/h or min/km</string>
    <string name="pref_title_dynamic_routing">Dynamic routing</string>
    <string name="pref_title_dynamic_averagespeed_routing_on_off">Enable dynamic average speed routing</string>
    <string name="pref_summary_off_dynamic_averagespeed_routing_on_off">Dynamic average speed routing is turned off</string>
    <string name="pref_summary_on_dynamic_averagespeed_routing_on_off">Dynamic average speed routing is turned on</string>
    <string name="pref_title_dynamic_routing_on_off">Enable dynamic heart rate routing</string>
    <string name="pref_summary_off_dynamic_routing_on_off">Dynamic heart rate routing is turned off</string>
    <string name="pref_summary_on_dynamic_routing_on_off">Dynamic heart rate routing is turned on</string>
    <string name="pref_title_dynamic_routing_heartrate">Pick your desired heart rate range</string>
    <string name="pref_summary_dynamic_routing_heartrate">If your heart rate goes under or above your desired range, the route will be dynamically adjusted</string>
    <string name="pref_title_dynamic_routing_park">Importance of parks</string>
    <string name="pref_summary_dynamic_routing_park">Determine how much the route generation favors routes through parks</string>
    <string name="pref_title_dynamic_routing_water">Importance of water</string>
    <string name="pref_summary_dynamic_routing_water">Determine how much the route generation favors routes next to water</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="pref_audio_directions">Audio directions</string>
    <string name="pref_audio_after_distance">After certain distance</string>
    <string name="pref_audio_after_duration">After certain duration</string>
    <string name="pref_distance_feedback_interval">Distance feedback interval</string>
    <string name="pref_duration_feedback_interval">Duration feedback interval</string>
    <string name="pref_feedback_moments">Feedback moments</string>
    <string name="pref_feedback_contents">Feedback contents</string>
    <string name="interval_minutes">minutes</string>
    <string name="npicker_every">Every</string>
    <string name="introduction_tooltips">Reset introduction tooltips</string>
    <string name="pref_about_build_number">Version Number</string>
    <string name="pref_title_audio">Audio Settings</string>
    <string name="pref_title_audio_directions">Audio directions</string>
    <string name="pref_title_audio_custom_sound">Voice directions</string>
    <string name="pref_title_audio_left_sound">Left audio sound</string>
    <string name="pref_title_audio_right_source">Right audio sound</string>
    <string name="pref_title_audio_situational_volume">Left/Right situational volume</string>
    <string name="pref_summaryOn_audio_situational_volume">Left and right volume are the same.</string>
    <string name="pref_summaryOff_audio_situational_volume">For left turns, the left-ear volume will be higher. For right turns, the right-ear volume will be higher.</string>
    <string name="pref_audio_right_sound">The sound that will be played when the route you are following goes right.</string>
    <string name="pref_dialogtitle_reset_tooltip_dialog">Reset Tooltips?</string>
    <string name="pref_msg_reset_tooltip_dialog">This will reset the tutorial highlighting app features.</string>
    <string name="pref_title_reset_tooltip_dialog">Reset feature highlights</string>
    <string name="pref_about">About</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="reset">reset</string>
    <string name="decline">decline</string>
    <string name="contact_button">Contact</string>
    <string name="contact_logo_description">Logo of Runamic.</string>
    <string name="contact_intro">Runamic Ghent was created by eight Computer Science Engineering students at the University of Ghent, during a course where a complete agile software development cycle is simulated.</string>
    <string name="person_simon_neuville">Simon Neuville</string>
    <string name="person_hendrik_depauw">Hendrik Depauw</string>
    <string name="person_lorenz_vanherwaarden">Lorenz van Herwaarden</string>
    <string name="person_simon_neuville_email">Simon.Neuville@UGent.be</string>
    <string name="person_hendrik_depauw_email">Hendrik.Depauw@UGent.be</string>
    <string name="person_lorenz_vanherwaarden_email">Lorenz.vanHerwaarden@UGent.be</string>
    <string name="person_olivier_cammaert">Olivier Cammaert</string>
    <string name="person_olivier_cammaert_email">Olivier.Cammaert@UGent.Be</string>
    <string name="person_nick_aelterman">Nick Aelterman</string>
    <string name="person_nick_aelterman_email">Nick.Aelterman@UGent.be</string>
    <string name="person_stiaan_uyttersprot">Stiaan Uyttersprot</string>
    <string name="person_stiaan_uyttersprot_email">Stiaan.Uyttersprot@UGent.be</string>
    <string name="person_maxim_deweirdt">Maxim Deweirdt</string>
    <string name="person_maxim_deweirdt_email">Maxim.Deweirdt@UGent.be</string>
    <string name="person_gerwin_dox">Gerwin Dox</string>
    <string name="person_gerwin_dox_email">Gerwin.Dox@UGent.be</string>
    <string name="contact_creators">Creators</string>
    <string name="contact_promotors">Promotors</string>
    <string name="person_filip_deturck">Filip De Turck</string>
    <string name="person_filip_deturck_email">Filip.DeTurck@UGent.be</string>
    <string name="person_femke_debackere_email">Femke.DeBackere@UGent.be</string>
    <string name="person_femke_debackere">Femke De Backere</string>
    <string name="person_stijn_depestel">Stijn De Pestel</string>
    <string name="person_stijn_depestel_email">Stijn.DePestel@UGent.be</string>
    <string name="person_jelle_nelis">Jelle Nelis</string>
    <string name="person_jelle_nelis_email">Jelle.Nelis@intec.ugent.be</string>
    <string name="contact_supervisors">Supervisors</string>
    <string name="pref_title_units">Units</string>
</resources>